2001-12-27  Frank Ch. Eigler  <fche@redhat.com>

	* cache.cxx (CacheListTypes, CacheCreate): Support hw-cache-buffer-8
	component type.
	* hw-cache.xml, hw-cache.txt: Modified accordingly.

2001-12-27  Frank Ch. Eigler  <fche@redhat.com>

	* cache.cxx (cache_sizes): Add "1" and "2" kb support.
	* hw-cache.xml, hw-cache.txt: Modified accordingly.

2001-12-04  Frank Ch. Eigler  <fche@redhat.com>
 
 	* cache.cxx (cache_sizes): Add "4" for "4kb".
 	* hw-cache.xml, hw-cache.txt: Modified accordingly.

2001-11-30  Frank Ch. Eigler  <fche@redhat.com>

	* cacheutil.cxx (hash_fn): Fix std:: namespace reference.

2001-10-22  Frank Ch. Eigler  <fche@redhat.com>

	* cache.cxx (flush_all): New function.  Associate with "flush-all" pin.
	* cacheutil.cxx (find_any_dirty): New functions.
	* cache.h, cacheutil.h: Relevant changes.
	Warning cleanups throughout.
	* hw-cache.xml (flush-all): Document new pin.
	* hw-cache-txt: Regenerated.

2001-09-27  Frank Ch. Eigler  <fche@redhat.com>

	* cache.cxx (emit_report): Remove extra blank line.
	(set_hash_mask, set_hash_shift): Exchange names to match functionality.
	* cacheutil.cxx (cache ctor): Compute good default hash_params.

2001-09-26  Frank Ch. Eigler  <fche@redhat.com>

	* cacheutil.cxx (hash_fn): Detect index overflow.  Complain loudly.
	* cacheutil.h: Include some more headers.

2001-08-04  Frank Ch. Eigler  <fche@redhat.com>

	* cache.cxx (~cache_component): Define.

2001-08-03  matthew green  <mrg@redhat.com>

	* cache.h (~cache_component): Add prototype.
	* cacheutil.cxx (std::operator==, operator==): Move this into the
	global name space.
	(std::cerr, std::hex, std::setw, std::setfill, std::endl, std::dec):
	Use these.
	* cacheutil.h (std::operator==, operator==): Move this into the
	global name space.

2001-07-13  Dave Brolley  <brolley@redhat.com>

        * cache.h (cache:bus::DEFN_METHOD): Generate function prototypes only.
	(::DEFN_METHOD): Generate actual inline function bodies after
	cache_component is defined.
