@@ -1,3 +1,9 @@
+2002-04-09  Ben Elliston  <bje@redhat.com>
+
+	* cache.cxx (cache_component::read_line): Set the overall latency
+	for a cache line fill to the latency of the first downstream read,
+	not the last.
+
 2001-12-27  Frank Ch. Eigler  <fche@redhat.com>
 
 	* cache.cxx (CacheListTypes, CacheCreate): Support hw-cache-buffer-8
